--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -24,13 +24,18 @@ jobs:
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
-    - name: google-services.json and extra strings file
-      env:
-        GOOGLE_SERVICES_BASE64: ${{secrets.GOOGLE_SERVICES_BASE64}}
-        STRINGS_OTHER_BASE64: ${{secrets.STRINGS_OTHER}}
+#    - name: google-services.json and extra strings file
+#      env:
+#        GOOGLE_SERVICES_BASE64: ${{secrets.GOOGLE_SERVICES_BASE64}}
+#        STRINGS_OTHER_BASE64: ${{secrets.STRINGS_OTHER}}
+#      run: |
+#         echo $GOOGLE_SERVICES_BASE64 | base64 --decode > ./app/google-services.json
+#         echo $STRINGS_OTHER_BASE64 | base64 --decode > ./app/src/main/res/values/strings_other.xml
+    - name: google-services.json and extra strings file (faked)
       run: |
-         echo $GOOGLE_SERVICES_BASE64 | base64 --decode > ./app/google-services.json
-         echo $STRINGS_OTHER_BASE64 | base64 --decode > ./app/src/main/res/values/strings_other.xml
+          cp ./app/google-services.example ./app/google-services.json
+          cp ./app/src/strings_other.xml.example ./app/src/main/res/values/strings_other.xml
+
     - name: Build with Gradle
       run: ./gradlew assembleRelease
     - name: Upload Artifacts
