--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,14 +1,15 @@
 name: Android CI
 
+# This workflow will build the Android app and upload the unsigned APK as an artifact.
+# It will also sign the APK and create a release using the GitHub CLI if a tag is pushed.
 on:
   push:
     branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
+    tags:
+      - 'v*.*.*' # Matches version tags like v1.0.0, v2.1.3, etc.
+    
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -24,18 +25,6 @@ jobs:
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
-#    - name: google-services.json and extra strings file
-#      env:
-#        GOOGLE_SERVICES_BASE64: ${{secrets.GOOGLE_SERVICES_BASE64}}
-#        STRINGS_OTHER_BASE64: ${{secrets.STRINGS_OTHER}}
-#      run: |
-#         echo $GOOGLE_SERVICES_BASE64 | base64 --decode > ./app/google-services.json
-#         echo $STRINGS_OTHER_BASE64 | base64 --decode > ./app/src/main/res/values/strings_other.xml
-    - name: google-services.json and extra strings file (faked)
-      run: |
-          cp ./app/google-services.example ./app/google-services.json
-          cp ./app/strings_other.xml.example ./app/src/main/res/values/strings_other.xml
-
     - name: Build with Gradle
       run: ./gradlew assembleRelease
     - name: Upload Artifacts
@@ -43,3 +32,14 @@ jobs:
       with:
           name: immich-tv-release-unsigned.apk
           path: ./app/build/outputs/apk/release/app-release-unsigned.apk
+
+    - name: sign the APK
+      if: startsWith(github.ref, 'refs/tags/v')
+      run: |
+        echo "${{ secrets.ANDROID_KEYSTORE }}" | base64 --decode > keystore.jks
+        jarsigner -verbose -sigalg SHA1withRSA -digestalg SHA1 -keystore keystore.jks -storepass "${{ secrets.ANDROID_KEYSTORE_PASSWORD }}" app/build/outputs/apk/release/app-release-unsigned.apk "${{ secrets.ANDROID_KEY_ALIAS }}"
+        zipalign -v 4 app/build/outputs/apk/release/app-release-unsigned.apk app/build/outputs/apk/release/immich-${{ github.ref }}.apk
+    - name: create release using gh cli
+      if: startsWith(github.ref, 'refs/tags/v')
+      run: |
+        gh release create ${{ github.ref }} app/build/outputs/apk/release/immich-${{ github.ref }}.apk --title "${{ github.ref }}" --notes "Release ${{ github.ref }}"
