--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -7,7 +7,10 @@ on:
     branches: [ "main" ]
     tags:
       - 'v*.*.*' # Matches version tags like v1.0.0, v2.1.3, etc.
-    
+   
+permissions:
+  contents: write # Required for creating releases
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -36,10 +39,14 @@ jobs:
     - name: sign the APK
       if: startsWith(github.ref, 'refs/tags/v')
       run: |
+        TAG_NAME=${GITHUB_REF##*/}
         echo "${{ secrets.ANDROID_KEYSTORE }}" | base64 --decode > keystore.jks
         jarsigner -verbose -sigalg SHA1withRSA -digestalg SHA1 -keystore keystore.jks -storepass "${{ secrets.ANDROID_KEYSTORE_PASSWORD }}" app/build/outputs/apk/release/app-release-unsigned.apk "${{ secrets.ANDROID_KEY_ALIAS }}"
-        zipalign -v 4 app/build/outputs/apk/release/app-release-unsigned.apk app/build/outputs/apk/release/immich-${{ github.ref }}.apk
+        mv app/build/outputs/apk/release/app-release-unsigned.apk app/build/outputs/apk/release/immich-${TAG_NAME}.apk
     - name: create release using gh cli
       if: startsWith(github.ref, 'refs/tags/v')
+      env:
+        GH_TOKEN: ${{ github.token }}
       run: |
-        gh release create ${{ github.ref }} app/build/outputs/apk/release/immich-${{ github.ref }}.apk --title "${{ github.ref }}" --notes "Release ${{ github.ref }}"
+        TAG_NAME=${GITHUB_REF##*/}
+        gh release create ${TAG_NAME} app/build/outputs/apk/release/immich-${TAG_NAME}.apk --title "${TAG_NAME}" --notes "Release ${TAG_NAME}"
